// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductFilters /> renders with initial state 1`] = `
<div
  className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3 MuiCard-root-1"
>
  <form>
    <div
      className="MuiCardHeader-root-29"
    >
      <div
        className="MuiCardHeader-content-32"
      >
        <span
          className="MuiTypography-root-35 MuiTypography-headline-40 MuiCardHeader-title-33"
        >
          Filters
        </span>
      </div>
      <div
        className="MuiCardHeader-action-31"
      >
        <button
          className="MuiButtonBase-root-65 MuiIconButton-root-59"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-64"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-68"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <g>
                <path
                  d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
                />
              </g>
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-74"
          />
        </button>
      </div>
    </div>
    <div
      className="MuiCardContent-root-81"
    >
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-82 MuiFormControl-fullWidth-85"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <label
          className="MuiFormLabel-root-91 MuiInputLabel-root-86 MuiInputLabel-formControl-87 MuiInputLabel-animated-90 MuiInputLabel-shrink-89"
          data-shrink={true}
          htmlFor={undefined}
        >
          Name
        </label>
        <div
          className="MuiInput-root-96 MuiInput-fullWidth-103 MuiInput-formControl-97 MuiInput-underline-100"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-104"
            defaultValue={undefined}
            disabled={false}
            id={undefined}
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value="Lorem ipsum"
          />
        </div>
      </div>
      <div
        className="Component-spacer-109"
      />
      <div
        className="MuiFormControl-root-82 Component-formControl-112"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <label
          className="MuiFormLabel-root-91 MuiInputLabel-root-86 MuiInputLabel-formControl-87 MuiInputLabel-animated-90 MuiInputLabel-shrink-89"
          data-shrink={true}
        >
          Product type
        </label>
        <div
          className="MuiInput-root-96 MuiInput-fullWidth-103 MuiInput-formControl-97 MuiInput-underline-100"
        >
          <div
            className="MuiSelect-root-113"
          >
            <div
              aria-haspopup="true"
              aria-owns={null}
              aria-pressed="false"
              className="MuiSelect-select-114 MuiSelect-selectMenu-115 MuiInput-input-104"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="Component-chipContainer-111"
              >
                <div
                  className="MuiChip-root-130 Component-chip-110"
                  onClick={undefined}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={-1}
                >
                  <span
                    className="MuiChip-label-135"
                  >
                    Type 1
                  </span>
                </div>
                <div
                  className="MuiChip-root-130 Component-chip-110"
                  onClick={undefined}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={-1}
                >
                  <span
                    className="MuiChip-label-135"
                  >
                    Type 4
                  </span>
                </div>
              </div>
            </div>
            <input
              aria-invalid={false}
              aria-required={false}
              autoComplete={undefined}
              autoFocus={undefined}
              defaultValue={undefined}
              id={undefined}
              name="productTypes"
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="hidden"
              value="123123123,123123126"
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-68 MuiSelect-icon-117"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Component-spacer-109"
      />
      <div
        className="Component-widgetContainer-125"
      >
        <div
          className="Component-inputContainer-122"
        >
          <div
            className="MuiFormControl-root-82"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <label
              className="MuiFormLabel-root-91 MuiInputLabel-root-86 MuiInputLabel-formControl-87 MuiInputLabel-animated-90 MuiInputLabel-shrink-89"
              data-shrink={true}
              htmlFor="price_min"
            >
              Price
            </label>
            <div
              className="MuiInput-root-96 MuiInput-fullWidth-103 MuiInput-formControl-97 MuiInput-underline-100"
            >
              <input
                aria-invalid={false}
                aria-required={false}
                autoComplete={undefined}
                autoFocus={undefined}
                className="MuiInput-input-104 MuiInput-inputType-107"
                defaultValue={undefined}
                disabled={false}
                id={undefined}
                name="price_min"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={undefined}
                onKeyUp={undefined}
                placeholder={undefined}
                readOnly={undefined}
                required={undefined}
                rows={undefined}
                type="number"
                value="30"
              />
              <div
                className="MuiInputAdornment-root-126 MuiInputAdornment-positionEnd-128"
              >
                <p
                  className="MuiTypography-root-35 MuiTypography-body1-44 MuiTypography-colorTextSecondary-57"
                >
                  USD
                </p>
              </div>
            </div>
          </div>
          <span
            className="Component-separator-124"
          >
            -
          </span>
          <div
            className="MuiFormControl-root-82"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              className="MuiInput-root-96 MuiInput-fullWidth-103 MuiInput-formControl-97 MuiInput-underline-100 Component-pullDown-123"
            >
              <input
                aria-invalid={false}
                aria-required={false}
                autoComplete={undefined}
                autoFocus={undefined}
                className="MuiInput-input-104 MuiInput-inputType-107"
                defaultValue={undefined}
                disabled={false}
                id={undefined}
                name="price_max"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={undefined}
                onKeyUp={undefined}
                placeholder={undefined}
                readOnly={undefined}
                required={undefined}
                rows={undefined}
                type="number"
                value="50"
              />
              <div
                className="MuiInputAdornment-root-126 MuiInputAdornment-positionEnd-128"
              >
                <p
                  className="MuiTypography-root-35 MuiTypography-body1-44 MuiTypography-colorTextSecondary-57"
                >
                  USD
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="Component-spacer-109"
      />
      <div
        className="MuiFormControl-root-82 Component-formControl-129"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <label
          className="MuiFormLabel-root-91 MuiInputLabel-root-86 MuiInputLabel-formControl-87 MuiInputLabel-animated-90 MuiInputLabel-shrink-89"
          data-shrink={true}
        >
          Published
        </label>
        <div
          className="MuiInput-root-96 MuiInput-fullWidth-103 MuiInput-formControl-97 MuiInput-underline-100"
        >
          <div
            className="MuiSelect-root-113"
          >
            <div
              aria-haspopup="true"
              aria-owns={null}
              aria-pressed="false"
              className="MuiSelect-select-114 MuiSelect-selectMenu-115 MuiInput-input-104"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203",
                  }
                }
              />
            </div>
            <input
              aria-invalid={false}
              aria-required={false}
              autoComplete={undefined}
              autoFocus={undefined}
              defaultValue={undefined}
              id={undefined}
              name="published"
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="hidden"
              value="true"
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-68 MuiSelect-icon-117"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Component-spacer-109"
      />
      <div
        className="MuiFormControl-root-82 Component-formControl-129"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <label
          className="MuiFormLabel-root-91 MuiInputLabel-root-86 MuiInputLabel-formControl-87 MuiInputLabel-animated-90 MuiInputLabel-shrink-89"
          data-shrink={true}
        >
          Highlighted
        </label>
        <div
          className="MuiInput-root-96 MuiInput-fullWidth-103 MuiInput-formControl-97 MuiInput-underline-100"
        >
          <div
            className="MuiSelect-root-113"
          >
            <div
              aria-haspopup="true"
              aria-owns={null}
              aria-pressed="false"
              className="MuiSelect-select-114 MuiSelect-selectMenu-115 MuiInput-input-104"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203",
                  }
                }
              />
            </div>
            <input
              aria-invalid={false}
              aria-required={false}
              autoComplete={undefined}
              autoFocus={undefined}
              defaultValue={undefined}
              id={undefined}
              name="highlighted"
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="hidden"
              value="false"
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-68 MuiSelect-icon-117"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`<ProductFilters /> renders without initial state 1`] = `
<div
  className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3 MuiCard-root-1"
>
  <form>
    <div
      className="MuiCardHeader-root-29"
    >
      <div
        className="MuiCardHeader-content-32"
      >
        <span
          className="MuiTypography-root-35 MuiTypography-headline-40 MuiCardHeader-title-33"
        >
          Filters
        </span>
      </div>
      <div
        className="MuiCardHeader-action-31"
      >
        <button
          className="MuiButtonBase-root-65 MuiIconButton-root-59"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-64"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-68"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <g>
                <path
                  d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
                />
              </g>
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-74"
          />
        </button>
      </div>
    </div>
    <div
      className="MuiCardContent-root-81"
    >
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-82 MuiFormControl-fullWidth-85"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <label
          className="MuiFormLabel-root-91 MuiInputLabel-root-86 MuiInputLabel-formControl-87 MuiInputLabel-animated-90"
          data-shrink={false}
          htmlFor={undefined}
        >
          Name
        </label>
        <div
          className="MuiInput-root-96 MuiInput-fullWidth-103 MuiInput-formControl-97 MuiInput-underline-100"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-104"
            defaultValue={undefined}
            disabled={false}
            id={undefined}
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="Component-spacer-109"
      />
      <div
        className="MuiFormControl-root-82 Component-formControl-112"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <label
          className="MuiFormLabel-root-91 MuiInputLabel-root-86 MuiInputLabel-formControl-87 MuiInputLabel-animated-90"
          data-shrink={false}
        >
          Product type
        </label>
        <div
          className="MuiInput-root-96 MuiInput-fullWidth-103 MuiInput-formControl-97 MuiInput-underline-100"
        >
          <div
            className="MuiSelect-root-113"
          >
            <div
              aria-haspopup="true"
              aria-owns={null}
              aria-pressed="false"
              className="MuiSelect-select-114 MuiSelect-selectMenu-115 MuiInput-input-104"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203",
                  }
                }
              />
            </div>
            <input
              aria-invalid={false}
              aria-required={false}
              autoComplete={undefined}
              autoFocus={undefined}
              defaultValue={undefined}
              id={undefined}
              name="productTypes"
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="hidden"
              value=""
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-68 MuiSelect-icon-117"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Component-spacer-109"
      />
      <div
        className="Component-widgetContainer-125"
      >
        <div
          className="Component-inputContainer-122"
        >
          <div
            className="MuiFormControl-root-82"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <label
              className="MuiFormLabel-root-91 MuiInputLabel-root-86 MuiInputLabel-formControl-87 MuiInputLabel-animated-90"
              data-shrink={false}
              htmlFor="price_min"
            >
              Price
            </label>
            <div
              className="MuiInput-root-96 MuiInput-fullWidth-103 MuiInput-formControl-97 MuiInput-underline-100"
            >
              <input
                aria-invalid={false}
                aria-required={false}
                autoComplete={undefined}
                autoFocus={undefined}
                className="MuiInput-input-104 MuiInput-inputType-107"
                defaultValue={undefined}
                disabled={false}
                id={undefined}
                name="price_min"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={undefined}
                onKeyUp={undefined}
                placeholder={undefined}
                readOnly={undefined}
                required={undefined}
                rows={undefined}
                type="number"
                value=""
              />
              <div
                className="MuiInputAdornment-root-126 MuiInputAdornment-positionEnd-128"
              >
                <p
                  className="MuiTypography-root-35 MuiTypography-body1-44 MuiTypography-colorTextSecondary-57"
                >
                  USD
                </p>
              </div>
            </div>
          </div>
          <span
            className="Component-separator-124"
          >
            -
          </span>
          <div
            className="MuiFormControl-root-82"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              className="MuiInput-root-96 MuiInput-fullWidth-103 MuiInput-formControl-97 MuiInput-underline-100 Component-pullDown-123"
            >
              <input
                aria-invalid={false}
                aria-required={false}
                autoComplete={undefined}
                autoFocus={undefined}
                className="MuiInput-input-104 MuiInput-inputType-107"
                defaultValue={undefined}
                disabled={false}
                id={undefined}
                name="price_max"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={undefined}
                onKeyUp={undefined}
                placeholder={undefined}
                readOnly={undefined}
                required={undefined}
                rows={undefined}
                type="number"
                value=""
              />
              <div
                className="MuiInputAdornment-root-126 MuiInputAdornment-positionEnd-128"
              >
                <p
                  className="MuiTypography-root-35 MuiTypography-body1-44 MuiTypography-colorTextSecondary-57"
                >
                  USD
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="Component-spacer-109"
      />
      <div
        className="MuiFormControl-root-82 Component-formControl-129"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <label
          className="MuiFormLabel-root-91 MuiInputLabel-root-86 MuiInputLabel-formControl-87 MuiInputLabel-animated-90"
          data-shrink={false}
        >
          Published
        </label>
        <div
          className="MuiInput-root-96 MuiInput-fullWidth-103 MuiInput-formControl-97 MuiInput-underline-100"
        >
          <div
            className="MuiSelect-root-113"
          >
            <div
              aria-haspopup="true"
              aria-owns={null}
              aria-pressed="false"
              className="MuiSelect-select-114 MuiSelect-selectMenu-115 MuiInput-input-104"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203",
                  }
                }
              />
            </div>
            <input
              aria-invalid={false}
              aria-required={false}
              autoComplete={undefined}
              autoFocus={undefined}
              defaultValue={undefined}
              id={undefined}
              name="published"
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="hidden"
              value=""
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-68 MuiSelect-icon-117"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Component-spacer-109"
      />
      <div
        className="MuiFormControl-root-82 Component-formControl-129"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <label
          className="MuiFormLabel-root-91 MuiInputLabel-root-86 MuiInputLabel-formControl-87 MuiInputLabel-animated-90"
          data-shrink={false}
        >
          Highlighted
        </label>
        <div
          className="MuiInput-root-96 MuiInput-fullWidth-103 MuiInput-formControl-97 MuiInput-underline-100"
        >
          <div
            className="MuiSelect-root-113"
          >
            <div
              aria-haspopup="true"
              aria-owns={null}
              aria-pressed="false"
              className="MuiSelect-select-114 MuiSelect-selectMenu-115 MuiInput-input-104"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203",
                  }
                }
              />
            </div>
            <input
              aria-invalid={false}
              aria-required={false}
              autoComplete={undefined}
              autoFocus={undefined}
              defaultValue={undefined}
              id={undefined}
              name="highlighted"
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="hidden"
              value=""
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-68 MuiSelect-icon-117"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
